# Polkadot_mars

./: .gitignore  Cargo.toml  README.md  aura1.curl  auto-genesis-state-mars1000  auto-genesis-wasm-mars1000  auto-polkadot-collator-chain-spec-mars1000.json  genesis-state-1000  genesis-state-2000  genesis-state-2001  genesis-wasm  mars-chain-spec.json  para2.curl  polkadot-collator-chain-spec-1000.json  rococo-hserver-local.json  rococo-local-cfde.json  rococo-local_0.9.9.json  rococo-parachain-2000.json
client/cli/src/: lib.rs
client/collator/: Cargo.toml
client/collator/src/: lib.rs
client/consensus/aura/: Cargo.toml
client/consensus/aura/src/: import_queue.rs  lib.rs
client/consensus/common/: Cargo.toml
client/consensus/common/src/: lib.rs  parachain_consensus.rs
client/consensus/relay-chain/: Cargo.toml
client/consensus/relay-chain/src/: lib.rs
client/network/src/: lib.rs  tests.rs
client/pov-recovery/src/: lib.rs
client/service/: Cargo.toml
client/service/src/: genesis.rs  lib.rs
docker/: docker-compose.yml
pallets/aura-ext/: Cargo.toml
pallets/aura-ext/src/: lib.rs
pallets/dmp-queue/src/: lib.rs
pallets/parachain-system/proc-macro/src/: lib.rs
pallets/parachain-system/src/: lib.rs  relay_state_snapshot.rs  tests.rs
pallets/parachain-system/src/validate_block/: implementation.rs
pallets/xcmp-queue/src/: lib.rs
polkadot-parachains/: Cargo.toml
polkadot-parachains/mars/: Cargo.toml
polkadot-parachains/mars/src/: lib.rs  part_ares_oracle.rs  part_collective.rs  part_price.rs  part_treasury.rs
polkadot-parachains/odyssey/: Cargo.toml
polkadot-parachains/odyssey/src/: lib.rs  part_oracle_finance.rs  part_scheduler.rs  part_staking.not.cfg.rs  part_vesting.rs
polkadot-parachains/pallets/bridge/: Cargo.toml
polkadot-parachains/pallets/bridge/src/: lib.rs
polkadot-parachains/pallets/getprice/: Cargo.toml
polkadot-parachains/pallets/getprice/src/: lib.rs
polkadot-parachains/pallets/pallet-ocw/: Cargo.toml
polkadot-parachains/pallets/pallet-ocw/src/: lib.rs
polkadot-parachains/pallets/parachain-staking/: Cargo.toml
polkadot-parachains/pallets/parachain-staking/src/: lib.rs
polkadot-parachains/pallets/price/: Cargo.toml
polkadot-parachains/pallets/price/src/: lib.rs
polkadot-parachains/res/: ares-protocol-mars-2008.json  ares-protocol-mars2008.json  ares-protocol-odyssey-2028.json  ares-protocol-odyssey2028.json
polkadot-parachains/rococo/: Cargo.toml  setting.conf
polkadot-parachains/rococo/src/: constants.rs  lib.rs  part_authorship.rs  part_democracy.rs  part_getprice.rs  part_ocw.rs  part_ocw_finance.rs  part_proxy.rs  part_session_and_collatorselection.rs  part_utility.rs
polkadot-parachains/rococo/src/weights/: mod.rs
polkadot-parachains/shell/src/: lib.rs
polkadot-parachains/src/: chain_spec.rs  cli.rs  command.rs  service.rs
polkadot-parachains/src/chain_spec/: genesis_of_mars.rs  genesis_of_odyssey.rs
polkadot-parachains/statemine/src/: lib.rs
polkadot-parachains/statemint-common/src/: lib.rs
polkadot-parachains/statemint/src/: lib.rs
polkadot-parachains/westmint/src/: lib.rs
primitives/core/src/: lib.rs
primitives/parachain-inherent/src/: client_side.rs  lib.rs  mock.rs
primitives/timestamp/src/: lib.rs
test/runtime/src/: lib.rs
test/service/: Cargo.toml
test/service/src/: genesis.rs  lib.rs
