[workspace]
members = [
	"client/cli",
	"client/consensus/aura",
	"client/consensus/common",
	"client/consensus/relay-chain",
	"client/network",
	"client/pov-recovery",
	"client/service",
	"pallets/aura-ext",
	"pallets/collator-selection",
	"pallets/dmp-queue",
	"pallets/parachain-system",
	"pallets/parachain-system/proc-macro",
	"pallets/session-benchmarking",
	"pallets/xcm",
	"pallets/xcmp-queue",
	"primitives/core",
	"primitives/parachain-inherent",
	"primitives/timestamp",
	"primitives/utility",
	"polkadot-parachains/",
	"polkadot-parachains/pallets/parachain-info",
	"polkadot-parachains/pallets/ping",
	"polkadot-parachains/rococo",
	"polkadot-parachains/shell",
	"polkadot-parachains/statemint-common",
	"polkadot-parachains/statemint",
	"polkadot-parachains/statemine",
	"polkadot-parachains/westmint",
	"test/runtime",
	"test/runtime-upgrade",
	"test/client",
	"test/service",
	"test/relay-sproof-builder",
	"test/relay-validation-worker-provider",
]

[profile.release]
panic = "unwind"

[patch."https://github.com/paritytech/substrate"]
sp-io = {  git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.9"}
frame-support = {  git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.9" }
frame-system = {  git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.9" }
sp-runtime = {  git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.9" }
sp-core =  {  git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.9" }
sp-application-crypto = {  git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.9" }
frame-benchmarking = { optional = true,  git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.9" }
sp-std = {  git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.9" }
pallet-balances = {  git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.9" }
pallet-aura = {  git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.9" }
pallet-authorship = {  git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.9" }
pallet-session = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.9" }
sp-keystore = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.9", optional = true }

sp-arithmetic = {  git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.9" }
sp-storage = {  git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.9" }
sp-externalities = {  git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.9" }
pallet-timestamp = {  git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.9" }
sp-trie = {  git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.9" }
sp-state-machine = {  git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.9" }
sc-executor = {  git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.9" }
sc-executor-wasmi = {  git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.9" }

sp-inherents = { git = "https://github.com/paritytech//substrate",  branch = "polkadot-v0.9.9" }
sp-version = { git = "https://github.com/paritytech//substrate",  branch = "polkadot-v0.9.9" }
sp-consensus = { git = "https://github.com/paritytech//substrate",  branch = "polkadot-v0.9.9" }
sp-timestamp = { git = "https://github.com/paritytech//substrate",  branch = "polkadot-v0.9.9" }
sp-api = { git = "https://github.com/paritytech//substrate",  branch = "polkadot-v0.9.9" }
sp-consensus-aura = { git = "https://github.com/paritytech//substrate",  branch = "polkadot-v0.9.9" }
pallet-uniques = { git = "https://github.com/paritytech//substrate",  branch = "polkadot-v0.9.9" }
pallet-offences = { git = "https://github.com/paritytech//substrate",  branch = "polkadot-v0.9.9" }

sc-consensus = { git = "https://github.com/paritytech//substrate",  branch = "polkadot-v0.9.9" }
sc-block-builder = { git = "https://github.com/paritytech//substrate",  branch = "polkadot-v0.9.9" }
sc-tracing = { git = "https://github.com/paritytech//substrate",  branch = "polkadot-v0.9.9" }
sc-state-db = { git = "https://github.com/paritytech//substrate",  branch = "polkadot-v0.9.9" }

sc-executor-common = { git = "https://github.com/paritytech//substrate",  branch = "polkadot-v0.9.9" }
sc-executor-wasmtime = { git = "https://github.com/paritytech//substrate",  branch = "polkadot-v0.9.9" }
sp-blockchain = { git = "https://github.com/paritytech//substrate",  branch = "polkadot-v0.9.9" }
sc-basic-authorship = { git = "https://github.com/paritytech//substrate",  branch = "polkadot-v0.9.9" }
sc-consensus-uncles = { git = "https://github.com/paritytech//substrate",  branch = "polkadot-v0.9.9" }
sc-transaction-pool = { git = "https://github.com/paritytech//substrate",  branch = "polkadot-v0.9.9" }
sc-client-api = { git = "https://github.com/paritytech//substrate",  branch = "polkadot-v0.9.9" }
sp-consensus-babe = { git = "https://github.com/paritytech//substrate",  branch = "polkadot-v0.9.9" }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech//substrate",  branch = "polkadot-v0.9.9" }
sp-authority-discovery = { git = "https://github.com/paritytech//substrate",  branch = "polkadot-v0.9.9" }
sp-finality-grandpa = { git = "https://github.com/paritytech//substrate",  branch = "polkadot-v0.9.9" }
remote-externalities = { git = "https://github.com/paritytech//substrate",  branch = "polkadot-v0.9.9" }
sp-keyring = { git = "https://github.com/paritytech//substrate",  branch = "polkadot-v0.9.9" }
sc-rpc-server = { git = "https://github.com/paritytech//substrate",  branch = "polkadot-v0.9.9" }
sc-transaction-pool-api = { git = "https://github.com/paritytech//substrate",  branch = "polkadot-v0.9.9" }
sp-transaction-pool = { git = "https://github.com/paritytech//substrate",  branch = "polkadot-v0.9.9" }

pallet-identity = { git = "https://github.com/paritytech//substrate",  branch = "polkadot-v0.9.9" }
pallet-democracy = { git = "https://github.com/paritytech//substrate",  branch = "polkadot-v0.9.9" }
pallet-scheduler = { git = "https://github.com/paritytech//substrate",  branch = "polkadot-v0.9.9" }
pallet-assets = { git = "https://github.com/paritytech//substrate",  branch = "polkadot-v0.9.9" }
pallet-im-online = { git = "https://github.com/paritytech//substrate",  branch = "polkadot-v0.9.9" }

pallet-election-provider-multi-phase = { git = "https://github.com/paritytech//substrate",  branch = "polkadot-v0.9.9" }
#xcm-builder = { git = "https://github.com/paritytech//substrate",  branch = "polkadot-v0.9.9" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech//substrate",  branch = "polkadot-v0.9.9" }
pallet-mmr = { git = "https://github.com/paritytech//substrate",  branch = "polkadot-v0.9.9" }
pallet-mmr-rpc = { git = "https://github.com/paritytech//substrate",  branch = "polkadot-v0.9.9" }
polkadot-node-core-pvf = { git = "https://github.com/paritytech//polkadot", branch = "release-v0.9.9" }
pallet-treasury = {  git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.9"  }
pallet-transaction-payment-rpc = {  git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.9"  }
pallet-transaction-payment = { git = "https://github.com/paritytech//substrate",  branch = "polkadot-v0.9.9" }
sp-wasm-interface = { git = "https://github.com/paritytech//substrate",  branch = "polkadot-v0.9.9" }
sp-consensus-vrf = { git = "https://github.com/paritytech//substrate",  branch = "polkadot-v0.9.9" }
sc-consensus-aura = { git = "https://github.com/paritytech//substrate",  branch = "polkadot-v0.9.9" }
sc-consensus-babe = { git = "https://github.com/paritytech//substrate",  branch = "polkadot-v0.9.9" }
sc-consensus-epochs = { git = "https://github.com/paritytech//substrate",  branch = "polkadot-v0.9.9" }
sc-finality-grandpa = { git = "https://github.com/paritytech//substrate",  branch = "polkadot-v0.9.9" }
sc-rpc-api = { git = "https://github.com/paritytech//substrate",  branch = "polkadot-v0.9.9" }
sc-network-gossip = { git = "https://github.com/paritytech//substrate",  branch = "polkadot-v0.9.9" }
sc-informant = { git = "https://github.com/paritytech//substrate",  branch = "polkadot-v0.9.9" }
sc-offchain = { git = "https://github.com/paritytech//substrate",  branch = "polkadot-v0.9.9" }
sc-chain-spec = { git = "https://github.com/paritytech//substrate",  branch = "polkadot-v0.9.9" }
sc-authority-discovery = { git = "https://github.com/paritytech//substrate",  branch = "polkadot-v0.9.9" }
pallet-babe = { git = "https://github.com/paritytech//substrate",  branch = "polkadot-v0.9.9" }
sc-client-db = { git = "https://github.com/paritytech//substrate",  branch = "polkadot-v0.9.9" }
frame-election-provider-support = { git = "https://github.com/paritytech//substrate",  branch = "polkadot-v0.9.9" }
sc-rpc = { git = "https://github.com/paritytech//substrate",  branch = "polkadot-v0.9.9" }

pallet-grandpa = { git = "https://github.com/paritytech//substrate",  branch = "polkadot-v0.9.9" }
pallet-staking = { git = "https://github.com/paritytech//substrate",  branch = "polkadot-v0.9.9" }
pallet-authority-discovery = { git = "https://github.com/paritytech//substrate",  branch = "polkadot-v0.9.9" }
sc-finality-grandpa-rpc = { git = "https://github.com/paritytech//substrate",  branch = "polkadot-v0.9.9" }
sc-service = { git = "https://github.com/paritytech//substrate",  branch = "polkadot-v0.9.9" }
sc-sync-state-rpc = { git = "https://github.com/paritytech//substrate",  branch = "polkadot-v0.9.9" }
sc-consensus-babe-rpc = { git = "https://github.com/paritytech//substrate",  branch = "polkadot-v0.9.9" }
substrate-test-client = { git = "https://github.com/paritytech//substrate",  branch = "polkadot-v0.9.9" }
sc-cli = { git = "https://github.com/paritytech//substrate",  branch = "polkadot-v0.9.9" }

frame-benchmarking-cli = { git = "https://github.com/paritytech//substrate",  branch = "polkadot-v0.9.9" }
try-runtime-cli = { git = "https://github.com/paritytech//substrate",  branch = "polkadot-v0.9.9" }
frame-try-runtime = { git = "https://github.com/paritytech//substrate",  branch = "polkadot-v0.9.9" }
sp-consensus-slots = { git = "https://github.com/paritytech//substrate",  branch = "polkadot-v0.9.9" }

sp-npos-elections = { git = "https://github.com/paritytech//substrate",  branch = "polkadot-v0.9.9" }
sc-telemetry = { git = "https://github.com/paritytech//substrate",  branch = "polkadot-v0.9.9" }
sc-consensus-slots = { git = "https://github.com/paritytech//substrate",  branch = "polkadot-v0.9.9" }

sp-block-builder = { git = "https://github.com/paritytech//substrate",  branch = "polkadot-v0.9.9" }
pallet-mmr-primitives = { git = "https://github.com/paritytech//substrate",  branch = "polkadot-v0.9.9" }
sc-network = { git = "https://github.com/paritytech//substrate",  branch = "polkadot-v0.9.9" }
sc-keystore = { git = "https://github.com/paritytech//substrate",  branch = "polkadot-v0.9.9" }
sp-session = { git = "https://github.com/paritytech//substrate",  branch = "polkadot-v0.9.9" }

#service = { package = "sc-service", git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.9" }


substrate-build-script-utils = { git = "https://github.com/paritytech//substrate",  branch = "polkadot-v0.9.9" }
substrate-prometheus-endpoint = { git = "https://github.com/paritytech//substrate",  branch = "polkadot-v0.9.9" }
sp-tracing = { git = "https://github.com/paritytech//substrate",  branch = "polkadot-v0.9.9" }
substrate-test-utils = { git = "https://github.com/paritytech//substrate",  branch = "polkadot-v0.9.9" }
substrate-test-utils-derive = { git = "https://github.com/paritytech//substrate",  branch = "polkadot-v0.9.9" }
pallet-staking-reward-curve = { git = "https://github.com/paritytech//substrate",  branch = "polkadot-v0.9.9" }
sp-utils = { git = "https://github.com/paritytech//substrate",  branch = "polkadot-v0.9.9" }
substrate-wasm-builder = { git = "https://github.com/paritytech//substrate",  branch = "polkadot-v0.9.9" }
#shell-runtime = { git = "https://github.com/paritytech//substrate",  branch = "polkadot-v0.9.9" }
sp-maybe-compressed-blob = { git = "https://github.com/paritytech//substrate",  branch = "polkadot-v0.9.9" }
sp-offchain = { git = "https://github.com/paritytech//substrate",  branch = "polkadot-v0.9.9" }
sp-staking = { git = "https://github.com/paritytech//substrate",  branch = "polkadot-v0.9.9" }
sp-test-primitives = { git = "https://github.com/paritytech//substrate",  branch = "polkadot-v0.9.9" }

# the trait
# `sp_offchain::OffchainWorkerApi<sp_runtime::generic::Block<sp_runtime::generic::Header<u32, BlakeTwo256>, OpaqueExtrinsic>>`
# is not implemented for `<RuntimeApi as ConstructRuntimeApi<sp_runtime::generic::Block<sp_runtime::generic::Header<u32, BlakeTwo256>, OpaqueExtrinsic>, sc_service::client::Client<sc_client_db::Backend<sp_runtime::generic::Block<sp_runtime::generic::Header<u32, BlakeTwo256>, OpaqueExtrinsic>>, LocalCallExecutor<sp_runtime::generic::Block<sp_runtime::generic::Header<u32, BlakeTwo256>, OpaqueExtrinsic>, sc_client_db::Backend<sp_runtime::generic::Block<sp_runtime::generic::Header<u32, BlakeTwo256>, OpaqueExtrinsic>>, NativeExecutor<Executor>>, sp_runtime::generic::Block<sp_runtime::generic::Header<u32, BlakeTwo256>, OpaqueExtrinsic>, RuntimeApi>>>::RuntimeApi`
