[package]
name = 'pallet-bridge'
authors = ['Anonymous']
description = 'FRAME pallet template for defining custom runtime logic.'
version = '3.0.0'
license = 'Unlicense'
homepage = 'https://substrate.dev'
repository = 'https://github.com/paritytech/substrate/'
edition = '2018'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = 'parity-scale-codec', version = '2.0.0', features = ['derive'], default-features = false }
serde = { version = "1.0.101", optional = true, features = ["derive"] }

sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.9" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.9" }

frame-support = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.9', default-features = false }
frame-system = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.9', default-features = false }
log = { version = "0.4.0", default-features = false }
xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.9", default-features = false }

cumulus-primitives-core = { path = "../../../primitives/core", default-features = false }
cumulus-pallet-xcm = { path = "../../../pallets/xcm", default-features = false }
pallet-ocw = { default-features = false,  package = "pallet-ocw", path= "../pallet-ocw" }

[features]
default = ['std']
std = [
	"codec/std",
	"serde",
	"cumulus-primitives-core/std",
	"sp-std/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
    "log/std",
	"pallet-ocw/std",
]