[package]
name = "pallet-ocw"
version = "3.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Unlicense"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
description = "FRAME example pallet for offchain worker"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
frame-support = {  default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }

frame-system = {  default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
sp-core = {  default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9", optional = true  }
# TODO::0.9.9 version don't add version .
#sp-keystore = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9", optional = true }
sp-io = {  default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
sp-runtime = {  default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
sp-std = {  default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9"  }

lite-json = { version = "0.1", default-features = false }
log = { version = "0.4.14", default-features = false }
pallet-authorship = {  default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
pallet-session = {  default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
sp-application-crypto = {  default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }

[features]
default = ["std"]
std = [
	"sp-application-crypto/std",
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"lite-json/std",
	"sp-core/std",
	"sp-io/std",
	"sp-keystore",
	"sp-runtime/std",
	"sp-std/std",
	"log/std",
	"pallet-authorship/std",
	"pallet-session/std",
]
try-runtime = ["frame-support/try-runtime"]
